# VSTAudio-ScreenCapture

./: .gitignore  README.md
screenshot/: Cargo.toml  README.md
screenshot/src/: display_info.rs  handler.rs  main.rs  screenshot.rs
vst-filter/: Cargo.toml  README.md
vst-filter/.cargo/: config.toml
vst-filter/src/: lib.rs
vst-filter/xtask/src/: main.rs
